<resources>
    <string name="app_name">Gym Notes</string>

    <!--    Generics-->
    <string name="text_email">E-mail</string>
    <string name="text_password">Senha</string>
    <string name="text_register_account">Criar Conta</string>
    <string name="error_generic">Ocorreu um erro, tente novamente.</string>

    <!--    Login Fragment-->
    <string name="text_btn_login_fragment">Login</string>
    <string name="text_recover_login_fragment">Recuperar conta</string>
    <string name="text_password_empty_login_fragment">Informe sua senha.</string>
    <string name="text_email_empty_login_fragment">Informe seu e-mail.</string>

    <!--    Recover Fragment-->
    <string name="text_btn_recover_account_fragment">Enviar</string>
    <string name="text_email_success_account_fragment">Enviado link de recuperação para seu e-mail.</string>


    <!--    Routine Fragment-->
    <string name="text_loading_routine_fragment">Carregando Treinos</string>

    <!--    Trainning Fragment-->
    <string name="text_loading_trainning_fragment">Carregando Exercicíos</string>

    <!--    Error Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta foi encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Insira uma senha válida.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!--    Form Routine Fragment-->
    <string name="text_title_routine_form_fragment">Novo Treino</string>
    <string name="text_tv_title_routine_form_fragment">Treino</string>
    <string name="text_tv_title_workout_form_fragment">Exercicios</string>
    <string name="text_button_save_fragment_training_form">Salvar</string>
    <string name="text_tv_description_fragment_training_form">Descrição</string>
    <string name="text_tv_empty_field_fragment_training_form">Preencha os campos para o treino.</string>
    <string name="text_tv_success_fragment_training_form">Treino salvo com sucesso.</string>


    <!--    Form Training Fragment-->
    <string name="text_title_exercice_form_fragment">Novo Exercício</string>
    <string name="text_tv_title_exercice_form_fragment">Exercício</string>
    <string name="text_tv_url_exercice_form_fragment">Url da Imagem</string>
    <string name="text_tv_obs_exercice_form_fragment">Observações</string>
    <string name="text_tv_empty_field_exercice_form_fragment">Preencha os campos para o exercicio.</string>

    <!--    Bottom Sheet Dialog-->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Entendi</string>

</resources>